--- a/backend/composer.json
+++ b/backend/composer.json
@@ -20,6 +20,9 @@
         "doctrine/doctrine-bundle": "^2.18",
         "doctrine/doctrine-migrations-bundle": "^3.7",
         "doctrine/orm": "^3.6",
+        "phpunit/phpunit": "^11.5",
+        "symfony/browser-kit": "7.4.*",
+        "symfony/css-selector": "7.4.*",
         "symfony/maker-bundle": "^1.65",
         "symfony/security-bundle": "7.4.*",
         "symfony/serializer": "7.4.*",
